	  use system provided complete symbol table. The option has
	  substantial effect on system image size. Mainly code/text. If
	  loading of applications at runtime is not planned do not select
	  this.  From Pavel Pisa (2015-08-23).
	* apps/examples/nettest: Add option to suppress network initialization.
	  This is necessary if the nettest is run from NSH which has already
	  initialized the network (2015-08-26).
	* apps/examples/nettest: Extend test so that can be performed using the
	  local loopback device (2015-08-26).
	* apps/nshlib: Fix error handling in 'cat' command.  On a failure to
	  allocate memory, a file was not being closed.  From Bruno Herrera
	  (2015-08-26).
	* apps/nshlib: Fix error handling in 'mv' command.  On a failure to
	  expand the second path, the memory allocated for the expansion of the
	  first path was not being freed.  From Bruno Herrera (2015-08-26).
	* apps/examples/netloop:  Add a test of the local loopback device
	  (2015-09-02).
	* apps/modbus and apps/include/modbus:  Macros PR_BEGIN_EXTERN_C and
	  PR_END_EXTERN_C were not defined in all contexts.  Replace with
	  explicit expansion in all cases. From Stefan Kolb (2015-09-03).
	* apps/canutils/uavcan: Add support for libuavcan.  From  Paul
	  Alexander Patience (2015-09-25).
	* apps/examples/udpblaster: Add a test to stress the network by
	  sending UDP packets at a very high rate.  (2015-09-30).
	* apps/examples/uavcan: libuavcan example from Paul Alexander
	  Patience (2015-10-01).

7.13 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/examples/fstest:  Add a generic file system test.  This is
	  essentially the same as examples/smart, but has all of the SmartFS
	  specific logic ripped out.  This was created for testing the new
	  tmpfs (2015-10-10).
	* apps/examples/zerocross: Add a Zero Cross application example.
	  From Alan Carvalho de Assis (2015-10-13).
	* apps/examples/media:  Add a simple test for access of media via
	  a block driver or MTD driver (2015-11-09).
